Removed workaround following ControlsFX bugfix