@@ -75,7 +75,6 @@ test {
 
 run {
     jvmArgs += [
-        '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
         '--add-exports', 'javafx.graphics/com.sun.javafx.css=ALL-UNNAMED'
     ]
 }
